add get tag by id and get all
